--- a/HTML/CSS/header.css
+++ b/HTML/CSS/header.css
@@ -4,7 +4,7 @@
     height: 50px;
 }
 
-header {
+ header {
     background-color: rgb(211, 211, 211);
     /*background-color: lightblue;*/
     display: flex;
@@ -16,6 +16,21 @@ header {
     right: 0;
     z-index: 1000;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+.header_part1{
+    display: flex;
+    width: 100px;
+
+}
+.header_part2{
+    display: flex;
+    width: 250px;
+    
+}
+.header_part3{
+    display: flex;
+    width: 100px;
+    
 }
 
 .logo {
