--- a/HTML/CSS/header.css
+++ b/HTML/CSS/header.css
@@ -1,14 +1,13 @@
 * {
     margin: 0;
     padding: 0;
-    height: 50px;
 }
-
  header {
+    height: 50px;
     background-color: rgb(211, 211, 211);
     /*background-color: lightblue;*/
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     position: fixed;
     top: 0;
@@ -19,23 +18,43 @@
 }
 .header_part1{
     display: flex;
-    width: 100px;
-
+    flex: 3;
+    align-items: center;
+    margin-left: 1%;
 }
 .header_part2{
     display: flex;
-    width: 250px;
-    
+    flex: 10;
+    align-items: center;
+}
+.part2_a{
+    flex: 1;
+}
+.part2_b{
+    flex: 4;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    gap: 20px;
+    margin-top: 10px;
+}
+.part2_c{
+    flex: 4;
 }
 .header_part3{
     display: flex;
-    width: 100px;
-    
+    flex: 2;
+    align-items: center;
+    justify-content: center;
 }
 
 .logo {
     height: 40px;
-    margin: 1px 0 0 10px;
+    margin: 5px 3px 3px 0px;
+}
+.profile{
+    margin-top: 6px;
+    margin-right: 30px;
 }
 
 header img {
@@ -47,15 +66,16 @@ header h1 {
     font-weight: 400;
     font-style: normal;
     font-size: 20px;
+   
+    
 }
 
-header h2 {
+header p {
     font-family: "Anybody", sans-serif;
-    font-optical-sizing: auto;
     font-weight: 700;
     font-style: normal;
     font-variation-settings:
       "wdth" 100;
     font-size: 24px;
-    margin-top: 25px;
+    
 }
