--- a/HTML/CSS/header.css
+++ b/HTML/CSS/header.css
@@ -3,6 +3,7 @@
     padding: 0;
 }
  header {
+    min-width: 600px;
     height: 50px;
     background-color: rgb(211, 211, 211);
     /*background-color: lightblue;*/
