--- a/HTML/CSS/intro.css
+++ b/HTML/CSS/intro.css
@@ -1,7 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-}
 
 .bg-image {
     width: 100%;
@@ -10,7 +6,7 @@
     background-position: center;
 }
 
-body {
+.front-page-img {
     position: relative;
 }
 
