--- a/HTML/CSS/menu.css
+++ b/HTML/CSS/menu.css
@@ -1,9 +1,4 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
-body {
+.menu-page {
     padding: 14.28vh 10vw;
     background-color: rgb(17, 17, 22);
 }
