--- a/HTML/CSS/gallery.css
+++ b/HTML/CSS/gallery.css
@@ -1,7 +1,8 @@
-body{
+body {
     margin: 0;
 }
-.Heading{
+
+.Heading {
     top: 0;
     left: 0;
     right: 0;
@@ -10,40 +11,48 @@ body{
     display: flex;
     position: absolute;
 }
-.Heading_left{
+
+.Heading_left {
     display: flex;
     flex: 2;
 }
-.Heading_Middle{
+
+.Heading_Middle {
     width: 658px;
     display: flex;
     flex: 3;
     flex-direction: column;
     min-width: 658px;
 }
-.Heading_right{
+
+.Heading_right {
     display: flex;
     flex: 2;
 }
-.Company{
+
+.Company {
     display: flex;
     height: 55%;
     margin: 0;
     width: 100%;
 }
-.logo{
+
+.logo {
     flex: 1;
 }
-.logo_img{
+
+.logo_img {
     height: 80%;
     width: 70%;
     margin-top: 12%;
     margin-left: 9%;
 }
-.company_name{
+
+.company_name {
     flex: 3;
 }
-.name{
+
+.name {
     width: 100%;
     font-family: "Joti One", serif;
     font-weight: 400;
@@ -53,7 +62,8 @@ body{
     margin-top: 2%;
     color: aliceblue;
 }
-.Gallery{
+
+.Gallery {
     width: 100%;
     display: flex;
     height: 45%;
@@ -61,9 +71,31 @@ body{
     align-items: center;
     text-align: center;
 }
-.gallery_section{
+
+.gallery_section {
+    position: absolute;
     top: 250px;
     left: 0;
     right: 0;
+    height: 3000px;
     background-color: #d7ccba;
+}
+.photos_grid {
+    display: grid;
+    /*border: 1px solid black;*/
+    grid-template-columns: repeat(auto-fit, minmax(370px, 1fr));
+    gap: 30px;
+    justify-content: center;
+    margin-top: 30px;
+}
+.photo_cell{
+    justify-content: center;
+    align-items: center;
+    height: 280px;
+}
+.gallery_img{
+    height: 80%;
+    width: 85%;
+    margin-left: 7.3%;
+    
 }
