--- a/HTML/CSS/membership.css
+++ b/HTML/CSS/membership.css
@@ -13,11 +13,25 @@ body {
     font-variation-settings: "wdth" 100;
 }
 
+.header {
+    animation: scale 1s linear;
+}
+
+@keyframes scale {
+    0% {
+        transform: scale(0.3);
+    }
+    100% {
+        transform: scale3D(1);
+    }
+}
+
 .member-contain {
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-content: space-around;
-    padding: 15vh 0 0 25vh;
+    padding: 5vh 0 0 25vh;
+    margin: 10vh 0 0 0;
 }
 
 .member-ele {
@@ -27,25 +41,41 @@ body {
     color: white;
     line-height: 8vh;
     padding: 2vh 0;
-    display:flex;
+    display: flex;
     flex-direction: column;
+    animation: swipe 2s linear;
+}
+
+@keyframes swipe {
+    0% {
+        transform: translateY(70vh);
+        transform: scale(0);
+    }
+    50% {
+        transform: translateY(70hv);
+        transform: scale(0);
+    }
+    100% {
+        transform: translateY(0);
+        transform: scale(1);
+    }
 }
 
 .member-title {
     font-weight: 500;
-    font-size: 36px;
+    font-size: 25px;
     -webkit-text-stroke: 1px black;
     text-align: center;
     border-bottom: 1px solid white;
 }
 
 .member-content {
-    height:max-content;
+    height: max-content;
     flex: 1;
     padding: 1vh 0 0 5vw;
     font-weight: 500;
     font-size: 28px;
-    -webkit-text-stroke: 1px black;
+    -webkit-text-stroke: 0.5px black;
 }
 
 .basic {
@@ -60,6 +90,10 @@ body {
     font-size: 24px;
     margin-right: 15px;
     margin-top: 25px;
+}
+
+.custom {
+    list-style: none;
 }
 
 .buy-membership {
@@ -77,12 +111,15 @@ body {
     margin: 0 0 0 1vw;
     color: white;
     border: 2px white solid;
+    cursor: pointer;
 }
 
-.b-2-99, .b-5-99 {
+.b-2-99,
+.b-5-99 {
     background-color: black;
 }
 
-.b-23-99, .b-79-99 {
+.b-23-99,
+.b-79-99 {
     background-color: rgb(45, 26, 26);
 }
