--- a/HTML/CSS/tips.css
+++ b/HTML/CSS/tips.css
@@ -3,17 +3,22 @@
     padding: 0;
 }
 
-body {
-    background-image: url("images/Tips.png");
-    background-repeat: no-repeat;
-    background-size: cover;
+.bg--image {
+    width: 100%;
+    height: 100vh;
+}
+
+.tips-page {
+    position: relative;
     color: white;
 }
 
 .tips-container {
     padding: 30px;
     max-width: 63vw;
-    margin: 15vh 0 0 7vw;
+    position: absolute;
+    left: 5vw;
+    top: 2vh;
 }
 
 .tips-title {
