--- a/HTML/CSS/partners.css
+++ b/HTML/CSS/partners.css
@@ -1,5 +1,10 @@
-body {
+* {
     margin: 0;
+    padding: 0;
+}
+
+body {
+    min-height: 100vh;
 }
 
 .Heading {
@@ -77,8 +82,8 @@ body {
     top: 250px;
     left: 0;
     right: 0;
-    height: 3000px;
-    background-color: #d7ccba;
+    background-color: rgb(215, 204, 186);
+    min-height:calc(100vh - 250px);
 }
 .photos_grid {
     display: grid;
@@ -97,5 +102,5 @@ body {
     height: 80%;
     width: 85%;
     margin-left: 7.3%;
-    
+    border: 2px black solid;
 }
