--- a/HTML/CSS/chest.css
+++ b/HTML/CSS/chest.css
@@ -3,7 +3,57 @@
     padding: 0;
 }
 
+body {
+    background-image: url("images/gym_bg\ 1.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
 .chest-exercises {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(13.888vw, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(calc((10 / 36) * 98vw), 1fr));
+    gap: calc((1 / 36) * 98vw);
+    justify-content: center;
+    padding: 16px;
+    margin: 0 calc(1 / 36 * 98vw);
+    border-radius: 80px;
+}
+
+.chest-exercise {
+    border: 1px solid black;
+    border-radius: 8px;
+    text-align: center;
+}
+
+.chest-exercise img {
+    height: 30vh;
+    width:100%;
+    display: block;
+    margin:0;
+}
+
+.exercise-details {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    gap: 0;
+    font-family: "Anybody", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+    font-variation-settings:
+      "wdth" 100;
+    background-color: white;
+}
+
+.detail-1 {
+    align-content: center;
+    font-size: 22px;
+}
+
+.detail-2 {
+    align-content: center;
+    font-size: 14px;
+    line-height: 20px;
+    padding: 5px;
 }
