--- a/HTML/CSS/membership.css
+++ b/HTML/CSS/membership.css
@@ -31,7 +31,7 @@ body {
     grid-template-columns: 1fr 1fr;
     justify-content: space-around;
     padding: 5vh 0 0 25vh;
-    margin: 10vh 0 0 0;
+    margin: 10vh 0;
 }
 
 .member-ele {
