--- a/HTML/CSS/store.css
+++ b/HTML/CSS/store.css
@@ -1,23 +1,21 @@
-body{
+body {
     margin: 0;
     height: 3000px;
 }
-.container{
-    position: absolute;
+
+.container {
     display: flex;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 300px;
     min-width: 670px;
 }
-.container_img{
+
+.container_img {
     height: 250px;
     width: 100%;
 }
-.side-bar{
+
+.side-bar {
     background-color: #f1f1f1;
-    position: absolute;
+    position: fixed;
     top: 250px;
     left: 0;
     right: 80%;
@@ -26,11 +24,71 @@ body{
     justify-content: center;
     align-items: center;
     min-width: 200px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding-top: 20px;
 }
-.items-grid{
-    position: absolute;
-    top: 250px;
-    
+
+.sidebar-btn {
+    padding: 10px 20px;
+    border: none;
+    background-color: #f0f0f0;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.sidebar-btn:hover {
+    background-color: #ddd;
+}
+
+.items-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit,1fr);
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-gap: 20px;
+    padding: 20px;
+    margin-left: 20%;
 }
+.item-cell{
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+.item{
+    display: flex;
+    align-items: center;
+    padding: 1px;
+    text-align: center;
+}
+.item_img{
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+    border-radius: 5px;
+}
+.item_info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5px;
+}
+.item_name{
+    font-size: 28px;
+    font-weight: bold;
+    margin: 10px 0;
+}
+.price_and_discount{
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+.price{
+    font-size: 26px;
+    font-weight: bold;
+    color: #333;
+}
+.discount{
+    font-size: 28px;
+    font-weight: bold;
+    color: #d93434;
+}
+
