--- a/HTML/CSS/store.css
+++ b/HTML/CSS/store.css
@@ -105,6 +105,13 @@ body {
     display: flex;
     gap: 10px;
     align-items: center;
+    font-family: "Anybody", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings:
+      "wdth" 100;
+    font-size: small;
 }
 
 @media (max-width: 768px) {
