--- a/HTML/CSS/login.css
+++ b/HTML/CSS/login.css
@@ -6,6 +6,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     width: 20vw;
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Input fields */
